--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["src", "App.tsx"]
 }
